fixup - add support for importing multiple projects and add vmargs for Eclipse import